# MiraboxSpace

./: .gitignore  LICENSE  README.md  README.zh-CN.md
SDJavaScriptSDK/com.mirabox.streamdock.xxx.sdPlugin/: manifest.json  readme.md  zh_CN.json
SDJavaScriptSDK/com.mirabox.streamdock.xxx.sdPlugin/plugin/: index.html  index.js
SDJavaScriptSDK/com.mirabox.streamdock.xxx.sdPlugin/plugin/utils/: common.js  worker.js
SDJavaScriptSDK/com.mirabox.streamdock.xxx.sdPlugin/propertyInspector/action1/: index.js
SDJavaScriptSDK/com.mirabox.streamdock.xxx.sdPlugin/propertyInspector/utils/: action.js
SDNodeJsSDK/com.mirabox.streamdock.demo.sdPlugin/: manifest.json  readme.md  zh_CN.json
SDNodeJsSDK/com.mirabox.streamdock.demo.sdPlugin/plugin/: autofile.js  index.js  package.json
SDNodeJsSDK/com.mirabox.streamdock.demo.sdPlugin/plugin/utils/: plugin.js
SDNodeJsSDK/com.mirabox.streamdock.demo.sdPlugin/propertyInspector/action1/: index.html  index.js
SDNodeJsSDK/com.mirabox.streamdock.demo.sdPlugin/propertyInspector/utils/: action.js
SDNodeJsSDKV2/com.mirabox.streamdock.demo.sdPlugin/: .gitignore  en.json  ko.json  manifest.json  readme.md  zh_CN.json
SDNodeJsSDKV2/com.mirabox.streamdock.demo.sdPlugin/plugin/: autofile.js  index.js  package.json
SDNodeJsSDKV2/com.mirabox.streamdock.demo.sdPlugin/plugin/utils/: plugin.js
SDNodeJsSDKV2/com.mirabox.streamdock.demo.sdPlugin/propertyInspector/demo/: index.html  index.js
SDNodeJsSDKV2/com.mirabox.streamdock.demo.sdPlugin/propertyInspector/utils/: action.js  common.js
SDQtSDK/: .gitignore
SDQtSDK/SDK/: Action.cpp  Action.h  BasePlugin.cpp  BasePlugin.h  ConnectionManager.cpp  ConnectionManager.h  CustomMain.cpp  CustomMain.h  Localizer.cpp  Localizer.h  Logger.cpp  Logger.h  Plugin.cpp  Plugin.h  SDK.pri  SDKDefines.h
SDQtSDK/cmake/StreamDockQtPlugin/: CMakeLists.txt  ExamplePlugin.cpp  ExamplePlugin.h
SDQtSDK/com.hotspot.cppsdk.demo.sdPlugin/: fr.json  manifest.json
SDQtSDK/qmake/StreamDockQtPlugin/: ExampleAction.cpp  ExampleAction.h  StreamDockQtPlugin.pro  main.cpp
SDVueSDK/vue/: .prettierignore  .prettierrc.yaml  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
SDVueSDK/vue/public/: interval.js
SDVueSDK/vue/script/: _.html  autofile.cjs
SDVueSDK/vue/src/: main.ts  manifest.cjs
SDVueSDK/vue/src/components/: tab-view.vue
SDVueSDK/vue/src/hooks/: i18n.ts  plugin.ts  property.ts
SDVueSDK/vue/src/pages/: index.vue
SDVueSDK/vue/src/pages/actions/: action1.vue
SDVueSDK/vue/src/plugin/: index.vue
SDVueSDK/vue/src/plugin/actions/: action1.ts
SDVueSDK/vue/src/types/: _streamdock.d.ts
StreamDockCPPSDK/: .gitignore  CMakeLists.txt  HSDExampleAction.cpp  HSDExampleAction.h  HSDExamplePlugin.cpp  HSDExamplePlugin.h  LICENSE  README.md  main.cpp
StreamDockCPPSDK/StreamDockCPPSDK/StreamDockSDK/: CMakeLists.txt  HSDAction.cpp  HSDAction.h  HSDActionWithExternalState.h  HSDBasePlugin.h  HSDConnectionManager.cpp  HSDConnectionManager.h  HSDLogger.cpp  HSDLogger.h  HSDMain.cpp  HSDMain.h  HSDPlugin.cpp  HSDPlugin.h  HSDSDKDefines.h  NlohmannJSONUtils.h
StreamDockCPPSDK/com.hotspot.cppsdk.demo.sdPlugin/: manifest.json  zh_CN.json
StreamDockCPPSDK/com.hotspot.cppsdk.demo.sdPlugin/action1/: index.js
StreamDockCPPSDK/com.hotspot.cppsdk.demo.sdPlugin/action2/: index.html
StreamDockCPPSDK/com.hotspot.cppsdk.demo.sdPlugin/static/: action.js  中文文档.md
StreamDockCPPSDK/com.hotspot.cppsdk.demo.sdPlugin/static/css/: sdpi.css
StreamDockCPPSDK/com.hotspot.cppsdk.demo.sdPlugin/static/utils/: color.js  common.js  worker.js
